; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/loongson64/lemote-2f/extr_reset.c_fl2f_reboot.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/loongson64/lemote-2f/extr_reset.c_fl2f_reboot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIVIL_SOFT_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @fl2f_reboot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fl2f_reboot() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @reset_cpu()
  %4 = load i32, i32* @DIVIL_SOFT_RESET, align 4
  %5 = call i32 @DIVIL_MSR_REG(i32 %4)
  %6 = call i32 @_rdmsr(i32 %5, i32* %1, i32* %2)
  %7 = load i32, i32* %2, align 4
  %8 = or i32 %7, 1
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* @DIVIL_SOFT_RESET, align 4
  %10 = call i32 @DIVIL_MSR_REG(i32 %9)
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @_wrmsr(i32 %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @reset_cpu(...) #1

declare dso_local i32 @_rdmsr(i32, i32*, i32*) #1

declare dso_local i32 @DIVIL_MSR_REG(i32) #1

declare dso_local i32 @_wrmsr(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
